デザイン修正

--- a/about.html
+++ b/about.html
@@ -21,13 +21,13 @@
     </header>
     <main class="main about wrapper"><img class="about__logo" src="./img/logo_type.svg" />
       <h1 class="title">
-        ちょっとズレてると揃えたくなる。
+        ズレてると揃えたくなる。
       </h1>
       <div class="wrapper about__content">
         <img class="about__img" src="./img/logo.svg" />
         <div class="about__textBox">
           <p class="about__text">
-            ちょっとズレて置いてある物、ちょっとズレて開いているドア、一巻だけない本棚、中途半端に閉まってる蛇口、そういったちょっと惜しいものがあると直したくなりませんか？僕はなってしまいます。
+            ちょっとズレて置いてある物、少しだけ開いているドア、一巻だけない本棚、中途半端に閉まってる蛇口、そういったちょっと惜しいものがあると直したくなりませんか？僕はなってしまいます。
           </p>
           <p class="about__text">
             「あそこさえが揃っていれば」「中途半端に開いてて気になる」「逆にここまでやったのになんで最後までやらないの？」そう思うことは日常茶飯事で、一度気になってしまうと直すまでムズムズします。
@@ -36,16 +36,11 @@
             絶対揃っていたほうが気持ちいいし、かっこいいし、綺麗。あと揃えるのって楽しくないですか？完璧に揃えたあとの達成感・満足感。そういった感情をもっともっと色んな人に知ってもらいたい。
           </p>
           <p class="about__text">
-            だから、そういった中途半端なもの、惜しいものを写真に収めて、ギャラリーとして見せようと思いました。これを見て一人でも多くの人が「うわぁ、揃えたい」と感じてもらい、揃えて欲しい。
+            だから、そういった中途半端なもの、惜しいものを写真に収めて、ギャラリーとして見せようと思いました。これを見て一人でも多くの人が「うわぁ、揃えたい」と感じてもらい、揃えて欲しい。　
           </p>
         </div>
       </div>
     </main>
-    <footer class="footer">
-      <p class="copy">
-        <small>Copyright (c) 2017 soloe All Rights Reserved.　</small>
-      </p>
-    </footer>
     <script src="./js/jquery-3.0.0.min.js"></script>
     <script src="./js/style.js"></script>
   </body>
