--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div class="logoAnimation">
+      <h1 class="title js-title">
+        ズレてると揃えたくなる
+      </h1>
       <div class="bars">
         <img class="bar bar1 js-bar" src="./img/logo_bar.svg" /><img class="bar bar2 js-bar" src="./img/logo_bar.svg" /><img class="bar bar3 js-bar" src="./img/logo_bar.svg" /><img class="bar bar4 js-bar" src="./img/logo_bar.svg" /><img class="bar bar5 js-bar" src="./img/logo_bar.svg" /><img class="bar bar6 js-bar" src="./img/logo_bar.svg" />
       </div>
@@ -24,50 +27,9 @@
         soloe
       </h1>
       <div class="mainVisual">
-        <img class="mainVisual__img" src="./img/img.jpg" />
+        <img class="mainVisual__img" src="" />
       </div>
-      <section class="container wrapper">
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img1.jpg" />
-        </div>
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img2.jpg" />
-        </div>
-        <div class="container__item container__item--h1">
-          <img class="container__item__img" src="./img/img3.jpg" />
-        </div>
-        <div class="container__item container__item--rotate">
-          <img class="container__item__img" src="./img/img4.jpg" />
-        </div>
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img5.jpg" />
-        </div>
-        <div class="container__item container__item--h2">
-          <img class="container__item__img" src="./img/img6.jpg" />
-        </div>
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img7.jpg" />
-        </div>
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img8.jpg" />
-        </div>
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img9.jpg" />
-        </div>
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img10.jpg" />
-        </div>
-        <div class="container__item">
-          <img class="container__item__img" src="./img/img11.jpg" />
-        </div>
-        <div class="container__item container__item--negativeM">
-          <img class="container__item__img" src="./img/img12.jpg" />
-        </div>
-        <div class="container__item container__item--negativeM">
-          <img class="container__item__img" src="./img/img13.jpg" />
-        </div>
-      </section>
-    </main>
+      <button class="randomButton">切り替え</button></main>
     <footer class="footer">
       <p class="copy">
         <small>Copyright (c) 2017 soloe All Rights Reserved.　</small>
